
.. contents::


bzr 1.4rc2 NOT RELEASED YET
---------------------------

  BUG FIXES:

    * ``bzr log -r ..X bzr://`` was failing, because it was getting a request
      for ``revision_id=None`` which was not a string.
      (John Arbash Meinel, #211661)

    * Fixed a bug in handling ghost revisions when logging changes in a 
      particular file.  (John Arbash Meinel, #209948)


bzr 1.4rc1 2008-04-11
---------------------

  NOTES WHEN UPGRADING:

  CHANGES:

   * bzr main script cannot be imported (Benjamin Peterson)

   * On Linux bzr additionally looks for plugins in arch-independent site
     directory. (Toshio Kuratomi)

   * The ``set_rh`` branch hook is now deprecated. Please migrate
     any plugins using this hook to use an alternative, e.g.
     ``post_change_branch_tip``. (Ian Clatworthy)

   * When a plugin cannot be loaded as the file path is not a valid
     python module name bzr will now strip a ``bzr_`` prefix from the
     front of the suggested name, as many plugins (e.g. bzr-svn)
     want to be installed without this prefix. It is a common mistake
     to have a folder named "bzr-svn" for that plugin, especially
     as this is what bzr branch lp:bzr-svn will give you. (James Westby,
     Andrew Cowie)

   * UniqueIntegerBugTracker now appends bug-ids instead of joining
     them to the base URL. Plugins that register bug trackers may
     need a trailing / added to the base URL if one is not already there.
     (James Wesby, Andrew Cowie)

  FEATURES:

    * Added mail-mode GNU Emacs mail package as a mail_client.
      (Xavier Maillard, Bojan Nikolic)

    * Added start_commit hook for mutable trees. (Jelmer Vernooij, #186422)

    * ``status`` now accepts ``--no-pending`` to show the status without
      listing pending merges, which speeds up the command a lot on large
      histories.  (James Westby, #202830)

    * New ``post_change_branch_tip`` hook that is called after the